# salad_core

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: character.rs  clue_text.rs  complete_solve.rs  designed_level.rs  display_word.rs  draw_grid.rs  draw_paper.rs  grid.rs  grid_layout.rs  grid_tile.rs  letter_counts.rs  level_trait.rs  lib.rs  normalized_character_iterator.rs  possible_paths.rs  safety_restriction.rs  special_characters.rs  svg_hexagon.rs  tile_usages.rs  word_trait.rs
src/snapshots/: salad_core__clue_text__tests__test_clues_svg.snap  salad_core__level_trait__tests__draw_grid-2.snap  salad_core__level_trait__tests__draw_grid.snap  salad_core__level_trait__tests__draw_grid_hexagon-2.snap  salad_core__level_trait__tests__draw_grid_hexagon.snap  salad_core__level_trait__tests__paper_svg-2.snap  salad_core__level_trait__tests__paper_svg.snap  salad_core__level_trait__tests__paper_svg_hexagon-2.snap  salad_core__level_trait__tests__paper_svg_hexagon.snap  salad_core__level_trait__tests__paper_svg_with_modifiers-2.snap  salad_core__level_trait__tests__paper_svg_with_modifiers.snap  salad_core__word_trait__tests__find_solutions.snap  salad_core__word_trait__tests__hidden_text.snap  salad_core__word_trait__tests__hidden_text.snap.new  salad_core__word_trait__tests__hinted_text.snap
